# UCLCHEM

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  10.inp  11.csv  Dockerfile  FEATURE_4_IMPLEMENTATION.txt  LICENSE.txt  README.md  analysis  best_command_yet.sh  chem (copy).f90  chem (y).f90  chem.f90  chem.mod  cloud.f90  cloudform  cshock.f90  cshock_parameters.f90  debuglog  docker-compose.yaml  end_step.d  evaplists.csv  example.inp  explosions.f90  final_rates.csv  final_species.csv  fort.44  fort.61  fort.99  grid.csv  hot_core_tests.py  hydro.f90  install.sh  jondebug  log1  main  main.f90  makefile  (+41 more)
.github/ISSUE_TEMPLATE/: uclchem-bug-report.md
.github/scripts/: check_fortran_ascii.py  execute_notebooks.py  write_meta.py
.github/workflows/: README.md  build.yaml  cd-notebooks-release.yml  check-fortran-metadata.yml  ci-check-fortran-metadata.yml  ci-lint.yml  ci-test-suite.yml  doctest.yml  general_coverage.yml  heating_cooling_tests.yml  lint.yml  notebooks.yml  photo_on_grain_tests.yml  precompute-notebooks.yml  pytest.yml
DLSODE/: opkdmain.f  opkdmain.f~  parameters.f90~
Makerates/: Functions.py  MakeRates.py  README.md  README.txt  comparenetworks.py  comparerenetworks.py  comparerespecies.py  comparespecies.py  dropped_reactions.csv  fixspecies.py  jonathan_com_reacs.csv  new_umist.yaml  rawlings_coms.py  reac_check  speciesnetwork.py  user_settings.yaml  user_settings_template.yaml  user_settings_with_heating.yaml
Makerates/benchoutputs/: evaplists.csv  final_rates.csv
Makerates/enthalpy_routines/: atct_database_v1.220.csv  atct_uclchem_conversion.py  atct_web_parser.py  custom_heating_cooling_reactions.csv  interactive_species_matching.py  species_matching_session.yaml  uclchem_v4.0.0_enthalpies.csv
Makerates/inputFiles/: .~lock.davidspecies.csv#  .~lock.newspecies.csv#  .~lock.uclgrainbasic.csv#  basicspecies.csv  cmzexplosionreacs.csv  cmzexplosionreacs2.csv  cmzexplosionspecies.csv  default_grain_network.csv  default_species.csv  enertestspecies.csv  excited_grain_network.csv  excited_species.csv  explosionreactions.csv  freeze_only_grain_network.csv  fullrates.csv  fullspecies.csv  grain_latest.csv  grain_latest_audrey.csv  newspecies.csv  p.csv  rate13.rates  species.csv  species_latest.csv  species_latest_audrey.csv  testspecies.csv  (+9 more)
Python/: analysis.py  check_element_conservation.py  example_plotting_script.py  first_model.ipynb  first_models.ipynb  fort.92  grid.py  modelling_objects.ipynb  plot_uclchem_tests.py  run_uclchem_tests.py  tests.py  uclchemwrap.md
Tutorials/: chemical_analysis.ipynb  first_model.ipynb  modelling_objects.ipynb  my_testing.ipynb  running_a_grid.ipynb  test_1e6.py
docs/: README.md
examples/: README.md  first_models.ipynb  howto.txt  lowstatic.inp  phase1.inp  phase2.inp  static.inp
notebooks/: 1_first_model.ipynb  1_first_model.py  1_first_model_function.ipynb  1_first_model_newAPI.ipynb  1_first_model_object.ipynb  1_first_model_object.py  2a_modeling_objects_on_disk.py  2a_modelling_objects_on_disk.ipynb  2a_modelling_objects_on_disk.py  2b_modeling_objects_in_memory.py  2b_modelling_objects_in_memory.ipynb  2b_modelling_objects_in_memory.py  2b_modelling_objects_in_memory_newAPI.ipynb  2c_save_load_model_objects.py  3_running_a_grid.ipynb  3_running_a_grid.py  4_chemical_analysis.ipynb  4_chemical_analysis.py  5_heating_and_cooling.ipynb  5_heating_and_cooling.py  5_save_load_model_objects.py.ipynb  6_advanced_settings.ipynb  6_advanced_settings.py  7_heating_cooling_settings.ipynb  7_heating_cooling_settings.py  8_dvode_solver_statistics.py  README.md  new_analysis.ipynb  new_analysis.py  notebooks.sh
output/: debuglog  shockdat
scripts/: abstractiontest.py  abundancetests.py  analysis.py  audrey.py  checkabunds.py  database_sampler.py  demo-plotting.py  demo.py  errortime.py  example_plotting_script.py  execute_notebooks.py  grid.py  mantletest.py  plot-examples.py  plot_uclchem_charge_tests.py  plot_uclchem_difference.py  plot_uclchem_tests.py  plotaverage.f90  plotexamples.py  plotfunctions.py  run_postprocessing.py  run_rollig_tests.py  run_uclchem_tests.py  serena_test.py  single_plot.py  single_wrap_tests.py  single_wrap_tests_reduced.py  tests.py  thermal_desorb_test.py  timedens  tomgrid.py  tomgridinput.py  write_meta.py
src/: Makefile  chem.f90  chemistry.f90  chemistry.mod  cloud.f90  collapse.f90  constants.f90  constants.mod  coolant_module.f90  cshock.f90  defaultparameters.f90  dropped_reactions.csv  dvode.f90  dvode_f90_m.mod  f90  heating.f90  heating.notes  hotcore.f90  hydro.f90  io.f90  jshock.f90  main.f90  network.f90  network.mod  odes.f90  parameters.f90  photoreactions.f90  photoreactions.mod  physics-core.f90  physics-template.f90  physics.mod  rates.f90  reactions.csv  readparameters.f90  species.csv  surfacereactions.f90  surfacereactions.mod  test_heatings.f90  turbfragsimple.f90  wrap.f90
test/: a.out  atomic_cooling.py  dimensionality_grid_singles.py  grain plots.ipynb  grain_area.py  inf_test.f90  print_test.f90  quicktest.py  sticking_test.py  test_exp.f90
tests/: test_1d_radiative_transfer.py  test_advanced.py  test_analysis.py  test_collapse_parcel_radius.py  test_custom_exothermicity.py  test_custom_networks.py  test_dvode_stats.py  test_exothermic_network.py  test_hdf5_storage.py  test_heating_arrays.py  test_heating_cooling_install.py  test_heating_module.py  test_hotcore.py  test_install.py  test_install_custom_networks.py  test_io_functions.py  test_loaded_network.py  test_logging.py  test_meta_data_separation.py  test_model_interface.py  test_ode_conservation.py  test_output_mode_mixing.py  test_parameter_classification.py  test_photo_on_grain.py  test_photo_on_grain_disk.py  test_photo_on_grain_memory.py  test_run_stages.py  test_run_stages_disk.py  test_run_stages_memory.py  test_species_parsing.py  test_success_flags.py  test_surface_chemistry_integration.py  test_utils.py
utils/: generate_param_docs.py  generate_param_docs_from_wrap.py  make_python_docs.sh  push_to_github.sh  remove_table_styles.py  run_notebooks.py
(+149 files in other folders)
