[build-system]
requires = ["setuptools>64,<74", "setuptools-scm", "numpy<2", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "uclchem"
dynamic = ["version"]
authors = [
    { name = "Gijs Vermariën", email = "vermarien@strw.leidenuniv.nl" },
    { name = "Marcus Keil" },
    { name = "Jon Holdship" },
    { name = "Tomas James" },
    { name = "Ross O'Donoghue" },
]
maintainers = [
	{name="Gijs Vermariën", email="vermarien@strw.leidenuniv.nl"},
]
license = {text = "MIT License"}
description = "A package for the astrochemical modelling of gas-grain chemistries."
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "pandas<2", "numpy<2", "pyyaml", "matplotlib", "seaborn", "pytest", "joblib", "pytest-xdist", "pre-commit"
]
