[build-system]
# build-backend="setuptools.build_meta"
requires = ["setuptools>64,<74", "numpy", "wheel", "setuptools-git-versioning>=2.0,<3", "meson-python",  "charset_normalizer"]
build-backend = "mesonpy"

[project]
name = "uclchem"
dynamic = ["version"]
authors = [
    { name = "Gijs Vermariën", email = "vermarien@strw.leidenuniv.nl" },
    { name = "Marcus Keil" },
    { name = "Jon Holdship" },
    { name = "Tomas James" },
    { name = "Ross O'Donoghue" },
]
maintainers = [
	{name="Gijs Vermariën", email="vermarien@strw.leidenuniv.nl"},
]
license = {text = "MIT License"}
description = "A package for the astrochemical modelling of gas-grain chemistries."
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pandas", "numpy", "pyyaml", "matplotlib", "seaborn", "pytest", "charset_normalizer", "scipy", "tqdm", "joblib", "pytest-xdist", "pre-commit"
]

