[build-system]
requires = ["numpy", "wheel", "meson-python", "charset_normalizer", "meson>=1.7.0"]
build-backend = "mesonpy"

[project]
name = "uclchem"
dynamic = ["version"]
authors = [
    { name = "Gijs Vermariën", email = "vermarien@strw.leidenuniv.nl" },
    { name = "Marcus Keil" },
    { name = "Jon Holdship" },
    { name = "Tomas James" },
    { name = "Ross O'Donoghue" },
]
maintainers = [
	{name="Gijs Vermariën", email="vermarien@strw.leidenuniv.nl"},
]
license = {text = "MIT License"}
description = "A package for the astrochemical modelling of gas-grain chemistries."
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pandas", "numpy", "pyyaml", "charset_normalizer", "matplotlib", "seaborn", "scipy", "tqdm", "joblib"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist", "pre-commit", "sphinx"]  # Development dependencies
docs = ["pydoc-markdown", "jupyter", "jupyter_contrib_nbextensions", "notebook<7"]